complétion knowledge information data

--- a/SemanticEnterprise.html
+++ b/SemanticEnterprise.html
@@ -45,12 +45,13 @@
 					<li><a href="#/4">Sémantique, Information et Connaissance</a></li>
 					<li><a href="#/5">Connotation, dénotation et perception contextuelle</a></li>
 					<li><a href="#/6">Intégrer philosophie de l'action, praxis et le pragmatisme</a></li>
-					<li><a href="#/7">Capture de la sémantique et Interopérabilité Sémantique</a></li>
-					<li><a href="#/8">Prise en compte de la perception contextuelle</a></li>
+					<li><a href="#/7">Sémantique et Informatique</a></li>
+					<li><a href="#/8">Capture de la sémantique et Intéropérabilité Sémantique</a></li>
 					<li><a href="#/9">La communication dans les entreprises digitales</a></li>
 					<li><a href="#/10">A propos des ontologies</a></li>
 					<li><a href="#/11">Les ontologies dans le contexte du triange sémantique</a></li>
-					<li><a href="#/12">Illustration des langages formels standardisés avec ArchiMate et des protocoles métiers</a></li>
+					<li><a href="#/12">Illustration des langages formels standardisés avec ArchiMate et des protocoles
+							métiers</a></li>
 					<li><a href="#/13">Le rôle de la normalisation</a></li>
 					<li><a href="#/14">Lien avec la babélisation</a></li>
 					<li><a href="#/15">Urbaniser et modéliser l'entreprise</a></li>
@@ -349,101 +350,182 @@
 			<section>
 				<section>
 					<h2 style="font-size: 0.8em;">Sémantique, Information et Connaissance</h2>
-					<img src="./img/SemantiqueInformationConnaissance.png" alt="Catégorisation et Classification"
+					<img src="./img/SemantiqueInformationConnaissance.png" alt="SemantiqueInformationConnaissance"
 						style="max-width: 50%; height: auto;" />
 				</section>
-			</section>
-			<section>
 				<section>
-					<h2 style="font-size: 0.8em;">Connotation dénotation et perception contextuelle</h2>
-					<img src="./img/ConnotationDenotationPerceptionContextuelle.png"
-						alt="ConnotationDenotationPerceptionContextuelle" style="max-width: 110%; height: auto;" />
-				</section>
-			</section>
-			<section>
-				<section>
-					<h2 style="font-size: 0.8em;">Intégrer philosophie de l'action, praxis et pragmatisme</h2>
-					<img src="./img/ActionPraxisPragmatisme.png" alt="ActionPraxisPragmatisme"
+					<h2 style="font-size: 0.8em;">Qu'est ce que la connaissance</h2>
+					<img src="./img/ArbreConnaissance.png" alt="ArbreConnaissance"
 						style="max-width: 30%; height: auto;" />
+					<ul style="font-size: 0.5em;">
+						<li>La capacité mentale permettant à l'esprit d'assimiler un contenu objectif, c'est-à-dire une
+							réalité indépendante de l'observateur, préalablement traduit en signes et en idées.</li>
+						<li>C'est également le résultat de cette assimilation</li>
+						<li>Elle représente une possession symbolique des choses et s'étend sur une infinité de niveaux.
+						</li>
+					</ul>
 				</section>
-			</section>
-			<section>
 				<section>
-					<h2 style="font-size: 0.8em;">Capture de la sémantique et<br> Interopérabilité Sémantique</h2>
-					<img src="./img/Interoperability.webp" alt="Interoperability"
-						style="max-width: 50%; height: auto;" />
+					<h2 style="font-size: 0.8em;">Qu'est ce que l'information</h2>
+					<img src="./img/Information.png" alt="Information" style="max-width: 30%; height: auto;" />
+					<ul style="font-size: 0.5em;">
+						<li>Une partie de la connaissance</li>
+						<li>Mais avoir une information sur un sujet ne signifie pas "connaître" ce sujet</li>
+						<li>Plus on accumule d'informations sur un sujet, plus on le "connaît".</li>
+						<li>La connaissance complète consiste à avoir le plus de facettes possible sur un sujet</li>
+					</ul>
 				</section>
-			</section>
-			<section>
 				<section>
-					<h2 style="font-size: 0.8em;">Prise en compte de la perception contextuelle</h2>
-					<img src="./img/PerceptionContextuelle.jpg" alt="Interoperability"
-						style="max-width: 50%; height: auto;" />
+					<img src="./img/QuestionsInformation.png" alt="QuestionsInformation"
+						style="max-width: 100%; height: auto;" />
 				</section>
-			</section>
-			<section>
 				<section>
-					<h2 style="font-size: 0.8em;">La communication dans les entreprises digitales</h2>
-					<img src="./img/CommunicationEnteprisesDigitales.png" alt="CommunicationEntrepriseDigitales"
-						style="max-width: 50%; height: auto;" />
+					<h2 style="font-size: 0.8em;">Qu’est ce que la donnée dans la perspective des Systèmes d’Information
+					</h2>
+					<img src="./img/autodaffe.png" alt="autodaffe" style="max-width: 50%; height: auto;" />
+					<ul style="font-size: 0.5em;">
+						<li>Aujourd’hui, dans toutes les organisations, les idées circulent en permanence.</li>
+						<li>Seules celles qui sont formalisées et qui ont une existence physique sont manipulables,
+							exploitables et réutilisables.</li>
+						<li>Cela concerne le stade initial de ce que l’on appelle l’information.</li>
+						<li>La donnée représente l’existence physique même d’une information.</li>
+					</ul>
 				</section>
-			</section>
-			<section>
 				<section>
-					<h2 style="font-size: 0.8em;">A propos des ontologies</h2>
-					<img src="./img/AProposDesOntologies.png" alt="AProposDesOntologies"
-						style="max-width: 50%; height: auto;" />
+					<h2 style="font-size: 0.8em;">Qu’est ce que la donnée dans la perspective des Systèmes d’Information
+					</h2>
+					<img src="./img/kpi.png" alt="kpi" style="max-width: 50%; height: auto;" />
+					<ul style="font-size: 0.5em;">
+						<li>À ce stade, il ne s'agit pas encore de sens, mais simplement d’existence physique, de
+							stockage
+							et d’adressage. .</li>
+						<li>Historiquement, dans le contexte des entreprises, la donnée était davantage liée à des
+							notions
+							de fichiers, bases de données ou enregistrements, sans nécessairement s’intéresser à son
+							sens ou
+							à son interprétation.</li>
+						<li>Cela concerne le stade initial de ce que l’on appelle l’information.</li>
+						<li>La donnée devient information lorsqu'elle véhicule un sens, en particulier lorsqu’elle est
+							interprétée dans un contexte métier.</li>
+					</ul>
+					</section>
+					<section>
+						<h2 style="font-size: 0.8em;">Qu’est ce que la donnée dans la perspective philosophique de la connaissance</h2>
+						<ul style="font-size: 0.5em;">
+							<li>Dans la conception philosophique de la connaissance, les données sont des éléments bruts, des faits ou observations sans interprétation, qui constituent la matière première pour l'acquisition du savoir.</li>
+							<li>Historiquement, dans le contexte des entreprises, la donnée était davantage liée à des notions de fichiers, bases de données ou enregistrements, sans nécessairement s’intéresser à son
+								sens ou à son interprétation.</li>
+
+						</ul>
 				</section>
-			</section>
-			<section>
 				<section>
-					<h2 style="font-size: 0.8em;">Les ontologies dans le contexte du triangle sémantique</h2>
-					<img src="./img/OntologiesContexteTriangleSemantique.png" alt="AProposDesOntologies"
-						style="max-width: 50%; height: auto;" />
+					<section>
+						<h2 style="font-size: 0.8em;">Connotation dénotation et perception contextuelle</h2>
+						<img src="./img/ConnotationDenotationPerceptionContextuelle.png"
+							alt="ConnotationDenotationPerceptionContextuelle" style="max-width: 110%; height: auto;" />
+					</section>
 				</section>
-			</section>			
-			<section>
 				<section>
-					<h2 style="font-size: 0.8em;">Illustration des langages formels standardisés avec ArchiMate et des
-						protocoles métiers</h2>
-					<img src="./img/archimate.webp" alt="archimate" style="max-width: 50%; height: auto;" />
+					<section>
+						<h2 style="font-size: 0.8em;">Intégrer philosophie de l'action, praxis et pragmatisme</h2>
+						<img src="./img/ActionPraxisPragmatisme.png" alt="ActionPraxisPragmatisme"
+							style="max-width: 30%; height: auto;" />
+					</section>
 				</section>
-			</section>
-			<section>
 				<section>
-					<h2 style="font-size: 0.8em;">Le rôle de la normalisation</h2>
-					<img src="./img/RoleDesStandards.webp" alt="RoleDesStandards"
-						style="max-width: 30%; height: auto;" />
+					<section>
+						<h2 style="font-size: 0.8em;">Sémantique et informatique</h2>
+						<img src="./img/SemantiqueInformatique.jpg" alt="SemantiqueInformatique"
+							style="max-width: 50%; height: auto;" />
+					</section>
+					<section>
+						<h2 style="font-size: 0.8em;">Introduction sur l'informatique</h2>
+					</section>
+					<section>
+						<h2 style="font-size: 0.8em;">Des langages machines aux langages des métiers</h2>
+					</section>
+					<section>
+						<h2 style="font-size: 0.8em;">Concept vs. Terme vs. Code <br> Retour au triangle sémantique</h2>
+					</section>
+					<section>
+						<h2 style="font-size: 0.8em;">Catégorisation et Classification dans le monde informatique</h2>
+					</section>
+					<section>
+						<h2 style="font-size: 0.8em;">A propos systèmes des bases de données</h2>
+					</section>
 				</section>
-			</section>
-			<section>
 				<section>
-					<h2 style="font-size: 0.8em;">Lien avec la babélisation</h2>
-					<img src="./img/LiensBabelisation.png" alt="LiensBabelisation"
-						style="max-width: 50%; height: auto;" />
+					<section>
+						<h2 style="font-size: 0.8em;">Capture de la sémantique et<br> Interopérabilité Sémantique</h2>
+						<img src="./img/Interoperability.webp" alt="Interoperability"
+							style="max-width: 50%; height: auto;" />
+					</section>
 				</section>
-			</section>
-			<section>
+
 				<section>
-					<h2 style="font-size: 0.8em;">Urbaniser et modéliser l'entreprise</h2>
-					<img src="./img/UrbaniserModeliserEntreprises.png" alt="UrbaniserModeliserEntreprises"
-						style="max-width: 80%; height: auto;" />
+					<section>
+						<h2 style="font-size: 0.8em;">La communication dans les entreprises digitales</h2>
+						<img src="./img/CommunicationEnteprisesDigitales.png" alt="CommunicationEntrepriseDigitales"
+							style="max-width: 50%; height: auto;" />
+					</section>
 				</section>
-			</section>
-			<section>
 				<section>
-					<h2 style="font-size: 0.8em;">Freins à l'urbanisation</h2>
-					<img src="./img/FreinsUrbanisation.png" alt="FreinsUrbanisation"
-						style="max-width: 50%; height: auto;" />
+					<section>
+						<h2 style="font-size: 0.8em;">A propos des ontologies</h2>
+						<img src="./img/AProposDesOntologies.png" alt="AProposDesOntologies"
+							style="max-width: 50%; height: auto;" />
+					</section>
 				</section>
-			</section>
-			<section>
 				<section>
-					<h2 style="font-size: 0.8em;">Incommunicabilité entre les acteurs</h2>
-					<img src="./img/IncommunicabiliteActeurs.png" alt="IncommunicabiliteActeurs"
-						style="max-width: 50%; height: auto;" />
+					<section>
+						<h2 style="font-size: 0.8em;">Les ontologies dans le contexte du triangle sémantique</h2>
+						<img src="./img/OntologiesContexteTriangleSemantique.png" alt="AProposDesOntologies"
+							style="max-width: 50%; height: auto;" />
+					</section>
 				</section>
-			</section>
+				<section>
+					<section>
+						<h2 style="font-size: 0.8em;">Illustration des langages formels standardisés avec ArchiMate et
+							des
+							protocoles métiers</h2>
+						<img src="./img/archimate.webp" alt="archimate" style="max-width: 50%; height: auto;" />
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2 style="font-size: 0.8em;">Le rôle de la normalisation</h2>
+						<img src="./img/RoleDesStandards.webp" alt="RoleDesStandards"
+							style="max-width: 30%; height: auto;" />
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2 style="font-size: 0.8em;">Lien avec la babélisation</h2>
+						<img src="./img/LiensBabelisation.png" alt="LiensBabelisation"
+							style="max-width: 50%; height: auto;" />
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2 style="font-size: 0.8em;">Urbaniser et modéliser l'entreprise</h2>
+						<img src="./img/UrbaniserModeliserEntreprises.png" alt="UrbaniserModeliserEntreprises"
+							style="max-width: 80%; height: auto;" />
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2 style="font-size: 0.8em;">Freins à l'urbanisation</h2>
+						<img src="./img/FreinsUrbanisation.png" alt="FreinsUrbanisation"
+							style="max-width: 50%; height: auto;" />
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2 style="font-size: 0.8em;">Incommunicabilité entre les acteurs</h2>
+						<img src="./img/IncommunicabiliteActeurs.png" alt="IncommunicabiliteActeurs"
+							style="max-width: 50%; height: auto;" />
+					</section>
+				</section>
 		</div>
 	</div>
 
