semantique et interoperabilité

--- a/SemanticEnterprise.html
+++ b/SemanticEnterprise.html
@@ -1024,8 +1024,7 @@
 						<p style="font-size: 0.6em;">Triangle Sémiotique: la connaissance entre le monde informatique et
 							le monde réel
 						</p>
-						<img src="./img/Les3Mondes.png" alt="Les3Mondes"
-							style="max-width: 50%; height: auto;" />
+						<img src="./img/Les3Mondes.png" alt="Les3Mondes" style="max-width: 50%; height: auto;" />
 						<br>
 						<ul style="font-size: 0.5em;">
 							<li>Triangle du Monde Réel (concret/abstrait et soumis au temps)</li>
@@ -1052,10 +1051,213 @@
 						</p>
 					</section>
 					<section>
-						<h3 style="font-size: 0.8em;">Catégorisation et Classification dans le monde informatique</h3>
+						<p style="font-size: 0.6em;">Conclusion
+							Impact profond de l'informatique
+						</p>
+						<br>
+						<ul style="font-size: 0.5em;">
+							<li>Reformulation explicite pour traitement automatisée et interpretabilité par les humains
+							</li>
+							<li>Importance de la retranscription pour l'interopérabilité des entreprises digitales</li>
+							<li>Les données alimentent les systèmes numériques, qui à leur tour influencent et
+								structurent notre compréhension du monde réel.</li>
+						</ul>
+						<br>
+						<p style="font-size: 0.5em;"><b>Vision traditionnelle du triangle sémiotique enrichie, avec
+								ancrage plus profond dans les réalités contemporaines de la gestion de
+								l'information et de la connaissance</b>
+						</p>
 					</section>
 					<section>
-						<h3 style="font-size: 0.8em;">A propos systèmes des bases de données</h3>
+						<h3 style="font-size: 0.8em;">Catégorisation et Classification<br>dans le monde informatique
+						</h3>
+						<br>
+						<p style="font-size: 0.6em;">Dans le contexte des systèmes d'information et des sciences
+							informatiques, la distinction entre
+							catégorisation et classification devient plus marquée en raison de leurs applications
+							techniques
+							spécifiques et de leurs objectifs. <br><br>Les deux concepts sont largement utilisés, mais
+							ils servent
+							des buts différents selon la conception du système, l'organisation des données et les
+							besoins
+							fonctionnels.</p>
+					</section>
+					<section>
+						<p style="font-size: 0.6em;">Catégorisation dans les systèmes d'information et l'informatique
+						</p>
+						<img src="./img/PortailMarchand.png" alt="PortailMarchand"
+							style="max-width: 50%; height: auto;" />
+						<br>
+						<ul style="font-size: 0.5em;">
+							<li>Définition: organisation de donnéesen types généraux ou groupes conceptuels basés sur
+								des attributs partagés. Souvent informel ou mal défini, guidé par des heuristiques ou
+								des préférences utilisateur.
+							</li>
+							<li>Objectif: donner un sens aux données en regroupant des éléments liés.</li>
+						</ul>
+						<br>
+						<p style="font-size: 0.5em;"><b>Flexible et orienté humain : intuition et expérience de
+								l'utilisateur plus que modèle formel</b>
+						</p>
+					</section>
+
+					<section>
+						<p style="font-size: 0.6em;">Classification dans les systèmes d'information et l'informatique
+						</p>
+						<img src="./img/InformationClassification.png" alt="InformationClassification"
+							style="max-width: 50%; height: auto;" />
+						<br>
+						<ul style="font-size: 0.5em;">
+							<li>Définition : arrangement systématique de données ou d'entités en classes spécifiques
+								basées
+								sur des critères prédéfinis et souvent rigides.Formalisée en hiérarchies ou
+								taxonomies pour traitement automatique.
+							</li>
+							<li>Objectif: organisation cohérente des données pour les algorithmes qui dépendent de
+								relations formalisées, comme dans l'apprentissage automatique, l'exploration de données
+								ou la gestion de bases de données.</li>
+						</ul>
+						<br>
+						<p style="font-size: 0.5em;"><b>Objectif et orienté algorithme :systèmes où la cohérence
+								logique,
+								la prévisibilité et le traitement algorithmique sont clés, comme dans les
+								modèles d'apprentissage supervisé.</b>
+						</p>
+					</section>
+					<section>
+						<p style="font-size: 0.6em;">Catégorisation vs. Classification dans un moteur de recherche pour
+							rechercher des produits
+						</p>
+						<img src="./img/CategorisationClassificationRecherche.png"
+							alt="CategorisationClassificationRecherche" style="max-width: 40%; height: auto;" />
+						<br>
+						<ul style="font-size: 0.4em;">
+							<li>Catégorisation pour recherche produit sur site de commerce
+								électronique, catégoriser avec étiquettes générales
+								comme "électronique", "articles ménagers" ou "meubles", distinctions larges et
+								conviviales.
+							</li>
+							<li>Classification en coulisse, classement des articles en fonction de taxonomies de
+								produits,
+								comme une "classe" d'électronique qui inclut ordinateurs portables, téléphones et
+								appareils photo,
+								chaque sous-élément appartenant à une seule classe.pour gestion des stocks et
+								analyse des données.</li>
+						</ul>
+						<br>
+						<p style="font-size: 0.4em;">Catégorisation plus flexible, orientée utilisateur et intuitive
+							pour conception UI et récupération informations.
+							<br>Classification est formelle, régie par des règles et algorithmiquement
+							précise, utilisée dans la gestion des données, l'apprentissage automatique et la conception
+							d'ontologies.
+							<br>Les deux sont complémentaires: la compréhension humaine vs. efficacité computationnelle
+							et logique formelle.
+						</p>
+					</section>
+
+					<section>
+						<p style="font-size: 0.6em;">Différences clés dans les systèmes d'information et l'informatique
+						</p>
+
+						<br>
+						<ul style="font-size: 0.5em;">
+							<li><b>Formalisation</b> :<br>catégorisation des SI adhoc ou guidée par comportement
+								utilisateur,
+								regroupements flexibles, chevauchants et parfois ambigus de données
+								evauchants et parfois ambigus de données, moins structurés,avec balises ou
+								folksonomies.<br>Structures formelles et rigides, classes
+								non chevauchantes et exhaustives, intégrité et cohérence des données,apprentissage
+								automatique ou schémas de base de données.
+							</li>
+							<li><b>Structures de données et algorithmes:</b><br>
+								catégorisation heuristiques, logique floue ou similarité sans nécessiter de distinctions
+								nettes entre groupes.<br>
+								Classification avec étiquettes discrètes et frontières bien définies, algorithmes de
+								classification où les données se voient assigner une seule classe.</li>
+							<li><b>Interactions humaines vs. calcul:</b> <br>
+								Catégorisation interfaces utilisateur etsystèmes de récupération d'informations,
+								intuitives pour l'utilisateur
+								Classification pour efficacité computationnelle et traitement
+								formel. Inférences logique et interrogation cohérente par machines.</li>
+							<li><b>Ontologies et taxonomies:</b> <br>
+								Catégorisation alignée création de folksonomies, structures informelles qui évoluent
+								avec l'utilisation<br>
+								Classification avec ontologies et taxonomies reposant sur classification, bases de
+								connaissance
+							</li>
+						</ul>
+						<br>
+					</section>
+					<section>
+						<p style="font-size: 0.6em;">Des modèles centrés sur l'humain aux modèles centrés sur la machine
+						</p>
+						<img src="./img/ModelesHumainMachine.png" alt="ModelesHumainMachine"
+							style="max-width: 40%; height: auto;" />
+						<br>
+						<ul style="font-size: 0.4em;">
+							<li>Côté humain : Symboles ↔ Concepts ↔ Référents : Les humains comprennent les symboles en
+								fonction de
+								significations culturelles ou contextuelles partagées et les associent à des objets du
+								monde réel par le biais de la cognition.<br>
+								Les concepts sont flous : Les concepts humains permettent souvent des exceptions, des
+								frontières ambiguës et une compréhension contextuelle.
+							</li>
+							<li>Côté machine : Données ↔ Modèles ↔ Inférences : Les machines ont besoin de
+								représentations explicites
+								où les données sont reliées à des modèles (schémas ou ontologies) qui décrivent comment
+								inférer, catégoriser ou classer automatiquement.<br>
+								Les concepts sont formalisés : Dans le traitement des machines, les concepts deviennent
+								des structures de données ou des classes bien définies avec des relations et des
+								contraintes claires.
+							</li>
+						</ul>
+					</section>
+					<section>
+						<p style="font-size: 0.6em;">Schémas logiques et ontologies
+						</p>
+						<img src="./img/SchemaOntology.png" alt="SchemaOntology"
+							style="max-width: 50%; height: auto;" />
+						<br>
+						<ol style="font-size: 0.4em;">
+							<li>Classes pour concepts ou catégories. Ex ontologie
+								médicale avec classe "Maladie" et différentes maladies
+								spécifiques comme instances ou sous-classes.
+							</li>
+							<li>Propriétés pour relations entre classes. Ex "aSymptôme"
+								propriété reliant classes "Maladie" et "Symptôme."
+							</li>
+							<li>Individus Ex "Grippe" comme instance de "Maladie."
+
+							</li>
+							</ul>
+							<br>
+							<p style="font-size: 0.5em;">Le raisonnement permet d'inférer de nouvelles connaissances.
+							</p>
+					</section>
+					<section>
+						<p style="font-size: 0.6em;">Schémas logiques et ontologies
+						</p>
+						<img src="./img/Taxonomies.png" alt="taxonomies" style="max-width: 40%; height: auto;" />
+						<br>
+						<ol style="font-size: 0.4em;">
+							<li>Taxonomies et logique descriptive (DL) Les taxonomies dans les systèmes machines sont
+								des hiérarchies de classification plus simples. Elles décrivent des relations
+								parent-enfant (par exemple, "Animal" → "Mammifère" → "Chien").
+							<li>Les logiques descriptives (DL) sont des sous-ensembles de la logique du premier ordre
+								utilisés pour fournir une base formelle à des langages comme OWL.
+							</li>
+							<li>DL permet aux machines de vérifier si une instance donnée appartient à une classe
+								spécifique, d'inférer des relations entre les classes (par exemple, si tous les chiens sont des
+								mammifères, et que les mammifères sont des animaux, alors les chiens sont des animaux).
+							</li>
+							</ul>
+					</section>
+					<section>
+						<h3 style="font-size: 0.7em;">Les systèmes de base de données</h3>
+					</section>
+					<section>	
+							<img src="./img/SystemesBDD.png" alt="SystemesBDD"
+							style="max-width: 100%; height: auto;" />				
 					</section>
 				</section>
 				<section>
@@ -1108,6 +1310,31 @@
 						<img src="./img/LiensBabelisation.png" alt="LiensBabelisation"
 							style="max-width: 50%; height: auto;" />
 					</section>
+					<section>
+						<h3 style="font-size: 0.8em;">Fragmentation des langues techniques 
+						</h3>
+					</section>
+					<section>
+						<h3 style="font-size: 0.8em;">Conséquence- ralentissement de l’innovation 
+
+						</h3>
+					</section>
+					<section>
+						<h3 style="font-size: 0.8em;">Conséquence- inefficacité organisationnelle 
+						</h3>
+					</section>
+					<section>
+						<h3 style="font-size: 0.8em;">Solutions pour Éviter la Babélisation des Standards - harmonisation et normalisation 
+						</h3>
+					</section>
+					<section>
+						<h3 style="font-size: 0.8em;">Solutions pour Éviter la Babélisation des Standards - adoption et sensibilisation 
+						</h3>
+					</section>
+					<section>
+						<h3 style="font-size: 0.8em;">Conclusion</h3>
+					</section>
+
 				</section>
 				<section>
 					<section>
@@ -1115,6 +1342,31 @@
 						<img src="./img/UrbaniserModeliserEntreprises.png" alt="UrbaniserModeliserEntreprises"
 							style="max-width: 80%; height: auto;" />
 					</section>
+					<section>
+						<h3 style="font-size: 0.8em;">Vision cohérente et intégrées des SI</h3>
+					</section>
+					<section>
+						<h3 style="font-size: 0.8em;">Réduction de la complexité</h3>
+					</section>
+					<section>
+						<h3 style="font-size: 0.8em;">Modélisation d'Entreprises avec ArchiMate - Langage commun pour la modélisation </h3>
+					</section>
+					<section>
+						<h3 style="font-size: 0.8em;">Modélisation d'Entreprises avec ArchiMate - Alignement des processus et des technologies 
+						</h3>
+					</section>									
+					<section>
+						<h3 style="font-size: 0.8em;">Impact sur la Babélisation et les Bénéfices - Réduction de la fragmentation 
+						</h3>
+					</section>
+					<section>
+						<h3 style="font-size: 0.8em;">Impact sur la Babélisation et les Bénéfices - Amélioration de l’interopérabilité et de l’efficacité 
+						</h3>
+					</section>	
+					<section>
+						<h3 style="font-size: 0.8em;">Conclusion
+						</h3>
+					</section>							
 				</section>
 				<section>
 					<section>
