--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 					<ul style="font-size: 0.5em;">
 						<li><a href="./IntroductionUML.html">Introduction UML</a></li>
 						<li><a href="./SemanticEnterprise.html">L'entreprise sémantique</a></li>
+						<li><a href="./SemanticInteroperability.html">Sémantique et Interopérabilité</a></li>
 					</ul>
 				</section>
 			</div>
