semantique et interoperabilité

--- a/SemanticInteroperability.html
+++ b/SemanticInteroperability.html
@@ -22,10 +22,18 @@
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="plugin/highlight/monokai.css">
     <style>
+        body {
+            margin: 0;
+            padding: 0;
+            height: 90%;
+            width: 90%;
+            overflow: hidden;
+        }
+
         /* Restrict the presentation area */
         #presentation-container {
-            width: 1400px;
-            height: 800px;
+            width: 90%;
+            height: 90%;
             border: 1px solid #ccc;
             overflow: hidden;
             margin: 20px auto;
@@ -259,23 +267,24 @@
                                 </section>
                                 <section>
                                     <div class="title-zone">
-                                    <h3>Contexte, Dénotation et Connotation</h3>
-                                </div>
-                                <div class="content-zone">
-                                    <div class="text-zone">
-                                    <ul>
-                                        <li><b>Contexte :</b> Influence sur le sens</li>
-                                        <li><b>Dénotation :</b> Sens objectif</li>
-                                        <li><b>Connotation :</b> Sens subjectif</li>
-                                    </ul>
-                                    <p>Illustration : Le mot "rose" peut désigner une fleur (dénotation) ou évoquer la
-                                        romance (connotation).</p>
+                                        <h3>Contexte, Dénotation et Connotation</h3>
                                     </div>
-                                    <div class="image-zone">
-                                        <img src="./img/ConnotationDenotationSemiotique.png"
-                                            alt="ConnotationDenotationSemiotique"
-                                            style="max-width: 80%; height: auto;" />
-                                    </div>
+                                    <div class="content-zone">
+                                        <div class="text-zone">
+                                            <ul>
+                                                <li><b>Contexte :</b> Influence sur le sens</li>
+                                                <li><b>Dénotation :</b> Sens objectif</li>
+                                                <li><b>Connotation :</b> Sens subjectif</li>
+                                            </ul>
+                                            <p>Illustration : Le mot "rose" peut désigner une fleur (dénotation) ou
+                                                évoquer la
+                                                romance (connotation).</p>
+                                        </div>
+                                        <div class="image-zone">
+                                            <img src="./img/ConnotationDenotationSemiotique.png"
+                                                alt="ConnotationDenotationSemiotique"
+                                                style="max-width: 80%; height: auto;" />
+                                        </div>
                                     </div>
                                 </section>
                             </section>
